Update: index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="container">
       <div class="wrapper">
         <div class="footer_content">
-          <a href=https://github.com/Amicronpersej8 class="logo"><img src="./assets/git.svg" height="40px" alt="git_logo"></a>
+          <a href=https://github.com/Amicronpersej8 class="logo"><img src="./assets/git.svg" height="40" alt="git_logo"></a>
           <a href="https://rs.school/js-stage0"><img class="logo" src="assets/logo.svg" alt="Photo" height="32"></a>
           <p>2022</p>
         </div>
